crates/codira_codegen/src/snapshots/codira_codegen__test__function_calls.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    func add_impl(a:i32, b:i32) -> i32 {\n        a+b\n    }\n\n    func add(a:i32, b:i32) -> i32 {\n      add_impl(a,b)\n    }\n\n    public func test() -> i32 {\n      add(4,5)\n      add_impl(4,5)\n      add(4,5)\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @add_impl(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %add = add i32 %1, %0
  ret i32 %add
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @add(i32 %0, i32 %1) local_unnamed_addr #0 {
body:
  %add.i = add i32 %1, %0
  ret i32 %add.i
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define noundef i32 @test() local_unnamed_addr #0 {
body:
  ret i32 9
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
