crates/codira_codegen/src/snapshots/codira_codegen__test__intrinsic_float_math.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    extern \"codira-intrinsic\" {\n        func sqrt_f64(x: f64) -> f64;\n        func sqrt_f32(x: f32) -> f32;\n        func pow_f64(base: f64, exponent: f64) -> f64;\n        func fma_f64(a: f64, b: f64, c: f64) -> f64;\n        func floor_f32(x: f32) -> f32;\n    }\n    public func mix(x: f64, y: f32) -> f64 {\n        sqrt_f64(x) + pow_f64(x, x) + fma_f64(x, x, x)\n    }\n    public func narrow(y: f32) -> f32 {\n        sqrt_f32(y) + floor_f32(y)\n    }\n    "
snapshot_kind: text
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [2 x ptr]

define double @mix(double %0, float %1) {
body:
  %y = alloca float, align 4
  store float %1, ptr %y, align 4
  %x = alloca double, align 8
  store double %0, ptr %x, align 8
  %x1 = load double, ptr %x, align 8
  %intrinsic.math = call double @llvm.sqrt.f64(double %x1)
  %x2 = load double, ptr %x, align 8
  %x3 = load double, ptr %x, align 8
  %intrinsic.math4 = call double @llvm.pow.f64(double %x2, double %x3)
  %add = fadd double %intrinsic.math, %intrinsic.math4
  %x5 = load double, ptr %x, align 8
  %x6 = load double, ptr %x, align 8
  %x7 = load double, ptr %x, align 8
  %intrinsic.math8 = call double @llvm.fma.f64(double %x5, double %x6, double %x7)
  %add9 = fadd double %add, %intrinsic.math8
  ret double %add9
}

define float @narrow(float %0) {
body:
  %y = alloca float, align 4
  store float %0, ptr %y, align 4
  %y1 = load float, ptr %y, align 4
  %intrinsic.math = call float @llvm.sqrt.f32(float %y1)
  %y2 = load float, ptr %y, align 4
  %intrinsic.math3 = call float @llvm.floor.f32(float %y2)
  %add = fadd float %intrinsic.math, %intrinsic.math3
  ret float %add
}

; Function Attrs: nocallback nocreateundeforpoison nofree nosync nounwind speculatable willreturn memory(none)
declare double @llvm.sqrt.f64(double) #0

; Function Attrs: nocallback nocreateundeforpoison nofree nosync nounwind speculatable willreturn memory(none)
declare double @llvm.pow.f64(double, double) #0

; Function Attrs: nocallback nocreateundeforpoison nofree nosync nounwind speculatable willreturn memory(none)
declare double @llvm.fma.f64(double, double, double) #0

; Function Attrs: nocallback nocreateundeforpoison nofree nosync nounwind speculatable willreturn memory(none)
declare float @llvm.sqrt.f32(float) #0

; Function Attrs: nocallback nocreateundeforpoison nofree nosync nounwind speculatable willreturn memory(none)
declare float @llvm.floor.f32(float) #0

attributes #0 = { nocallback nocreateundeforpoison nofree nosync nounwind speculatable willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
